@@ -1,5 +1,10 @@
 2009-06-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
 
+	Added unit tests for strjoin, strconcat and strappend.
+	* test/a2functionalTest.cc
+
+2009-06-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
+
 	Rewritten strconcat and strappend using operator+ instead of
 	append().
 	* src/a2functional.h
